compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__arithmetic_op_wrong_type_identity.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    var b : boolean\n    var _b := + b\n"

---
"b"@(FileId(1), 9..10) [Declared]: ref_mut boolean
"_b"@(FileId(1), 29..31) [Declared]: ref_mut <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 35..36: incompatible types for unary `+`
| info: operand must be a number
