compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_boolean.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var b : boolean\n\nvar _v00 : boolean := b\n"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(0))) TyRef(Boolean)
    TypeId(HirId(Idx::<HirNode>(2))) TyRef(Boolean)
def_kinds:
    DefId(0) Var(TyRef(Boolean))
    DefId(1) Var(TyRef(Boolean))
