compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_char_1.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const N := 1\nvar c : char\nvar c1 : char(1)\nvar s : string\nvar s1 : string(1)\nvar s5 : string(5)\n\nvar _v00 : char(N) := c\nvar _v01 : char(N) := c1\nvar _v02 : char(N) := s1\nvar _v03 : char(N) := s % runtime checked\nvar _v04 : char(N) := s5 % runtime checked\n"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Char)
    Idx::<Type>(1) TyRef(CharN(Fixed(1)))
    Idx::<Type>(2) TyRef(String)
    Idx::<Type>(3) TyRef(StringN(Fixed(1)))
    Idx::<Type>(4) TyRef(StringN(Fixed(5)))
    Idx::<Type>(5) TyRef(CharN(Fixed(1)))
    Idx::<Type>(6) TyRef(CharN(Fixed(1)))
    Idx::<Type>(7) TyRef(CharN(Fixed(1)))
    Idx::<Type>(8) TyRef(CharN(Fixed(1)))
    Idx::<Type>(9) TyRef(CharN(Fixed(1)))
def_kinds:
    DefId(0) Const(TyRef(Int(Int)))
    DefId(1) Var(TyRef(Char))
    DefId(2) Var(TyRef(CharN(Fixed(1))))
    DefId(3) Var(TyRef(String))
    DefId(4) Var(TyRef(StringN(Fixed(1))))
    DefId(5) Var(TyRef(StringN(Fixed(5))))
    DefId(6) Var(TyRef(CharN(Fixed(1))))
    DefId(7) Var(TyRef(CharN(Fixed(1))))
    DefId(8) Var(TyRef(CharN(Fixed(1))))
    DefId(9) Var(TyRef(CharN(Fixed(1))))
    DefId(10) Var(TyRef(CharN(Fixed(1))))
