compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_char_1_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const N := 1\nvar c5 : char(5)\n\nvar _e00 : char(N) := c5\n"

---
"N"@(FileId(1), 6..7) [Declared]: ref int
"c5"@(FileId(1), 17..19) [Declared]: ref_mut char_n Fixed(Unevaluated(LibraryId(0), BodyId(1)))
"_e00"@(FileId(1), 35..39) [Declared]: ref_mut char_n Fixed(Unevaluated(LibraryId(0), BodyId(2)))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 53..55: mismatched types
| error in file FileId(1) for 53..55: the type of this expression...
| note in file FileId(1) for 42..49: is incompatible with this type
